force-app/main/default/objects/Student__c/fields/Mentor_Name__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Name__c</fullName>
    <label>Mentor_Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please check the mentor list - where atleast 1 mentor exists with &quot;Rakesh@test.com&quot;</errorMessage>
        <filterItems>
            <field>Mentor__c.M_Email__c</field>
            <operation>equals</operation>
            <value>rakesh@test.com</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Mentor__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>