force-app/main/default/objects/Student__c/fields/Student_Email__c.field-meta.xml
<CustomField>
    <fullName>Student_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This captures the email ID of the student</description>
    <inlineHelpText>Help me with Student Email ID</inlineHelpText>
    <label>Student Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>