force-app/main/default/objects/Student__c/listViews/Sample_List_View.listView-meta.xml
<ListView>
    <fullName>Sample_List_View</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Student_Email__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
    </filters>
    <label>Sample List View</label>
</ListView>